# expressions

./: .buildconfig  README.md  build_and_install.sh  id.perret.expressions.json  id.perret.expressions.yml  meson.build
src/: main.cpp  meson.build
src/Application/: GtkmmTreeVisualizer.hpp  VisualExpressions.cpp  VisualExpressions.hpp  meson.build
src/ArgParser/: ArgumentParser.cpp  ArgumentParser.hpp  meson.build
src/Expressions/: Expression.cpp  Expression.hpp  meson.build
src/Logger/: Logger.cpp  Logger.hpp  meson.build
src/Operators/: Addition.h  Division.h  Multiplication.h  Operator.cpp  Operator.h  Power.h  Substraction.h  meson.build
src/TreeVisualizer/: BinaryTree.cpp  BinaryTree.hpp  DebugVisualizer.hpp  meson.build
